# scikit-fallback

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-docs.yml  python-package.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  core.rst  ensemble.rst  estimators.rst  index.rst  installation.rst  metrics.rst
examples/: README.md  plot_cascading.py  plot_confusion_matrix.py  plot_decision_boundary.py  plot_rejected_samples.py
examples/notebooks/: osvm-mnist.ipynb
skfb/: __init__.py
skfb/cascade/: _threshold.py
skfb/cascade/tests/: test_threshold_cascade_classifier.py
skfb/core/: __init__.py  array.py  exceptions.py
skfb/core/tests/: test_array.py
skfb/ensemble/: __init__.py  _common.py  _router.py  _routing.py  _threshold.py
skfb/ensemble/tests/: test_router.py  test_routing.py  test_threshold_cascade_classifier.py  test_threshold_cascade_classifier_cv.py
skfb/estimators/: __init__.py  _anomaly.py  _multi_threshold.py  _rule.py  _threshold.py  base.py
skfb/estimators/tests/: test_anomaly.py  test_common.py  test_multi_threshold.py  test_rule.py  test_threshold.py
skfb/experimental/: __init__.py  enable_error_rejection_loss.py  enable_multi_threshold_fallback_classifier_cv.py
skfb/metrics/: __init__.py  _classification.py  _common.py  _plot.py  _ranking.py
skfb/metrics/tests/: test_classification.py  test_common.py
skfb/utils/: __init__.py  _legacy.py  _validation.py
