[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-fallback"
description = "Machine learning with a reject option"
license = { file = "LICENSE" }
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
    { name = "Sanjar Ad[yi]lov"},
]
maintainers = [
    { name = "Sanjar Ad[yi]lov"},
]
dependencies = [
    "scikit-learn>=1.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "skfb.__version__"}

[project.urls]
Homepage = "https://github.com/sanjaradylov/scikit-fallback"

[project.optional-dependencies]

tests = [
    "black>=24.4.0",
    "matplotlib>=3.0",
    "pre-commit>=3.7.0",
    "pylint~=3.1.0",
    "pytest>=8.0",
]
dev = [
    "jupyterlab",
]
examples = [
    "matplotlib>=3.0",
]

# 🔨 Setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
exclude = ["./**tests/"]

# 🧪 Pytest configuration.
[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "./**/tests/",
]

# 🦥 Interrogate configuration.
[tool.interrogate]
ignore-init-method = true
ignore-new-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
exclude = ["**/tests/**.py", ".temp/**.py", "examples/**.py"]
fail-under = 90
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = ".temp/"
badge-format = "svg"
